@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: safe.test,v 1.14 2004/08/19 17:59:18 dgp Exp $
+# RCS: @(#) $Id: safe.test,v 1.15 2004/12/06 22:54:12 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -39,6 +39,9 @@ if {"$tcl_platform(platform)" == "windows"} {
 } else {
     set hidden_cmds {bell cd clipboard encoding exec exit fconfigure file glob grab load menu open pwd selection send socket source toplevel wm}
 }
+
+set saveAutoPath $::auto_path
+set auto_path [list [info library] $::tk_library]
 
 test safe-1.1 {Safe Tk loading into an interpreter} {
     catch {safe::interpDelete a}
@@ -209,6 +212,7 @@ test safe-7.1 {canvas printing} {
 } 0
 
 # cleanup
+set ::auto_path $saveAutoPath
 unset hidden_cmds
 cleanupTests
 return
