@@ -2,7 +2,7 @@ This file summarizes all changes made to Tk since version 1.0 was
 released on March 13, 1991.  Changes that aren't backward compatible
 are marked specially.
 
-RCS: @(#) $Id: changes,v 1.71 2004/12/06 20:27:57 hobbs Exp $
+RCS: @(#) $Id: changes,v 1.72 2004/12/06 22:54:12 dgp Exp $
 
 3/16/91 (bug fix) Modified tkWindow.c to remove Tk's Tcl commands from
 the interpreter when the main window is deleted (otherwise there will
@@ -5802,6 +5802,9 @@ radio/checkbuttons when colors are exhausted (griffin)
 platform (steffen)
 	*** POTENTIAL INCOMPATIBILITY ***
 
+2004-03-26 (new feature)[FRQ 540375] support for
+[image create photo -format PPM -data] (fellows)
+
 2004-05-14 (bug fix)[TIP 152] -detail option for tk_messageBox (fellows)
 
 2004-06-04 (bug fix)[965398] Fix to shimmering infinite loop scrolling in
@@ -5847,6 +5850,8 @@ keys on the keypad using the Extended modifier (grossbauer, kenny)
 2004-07-27 (bug fix) Fix segfault in case of premature end of GIF image
 data (steffen)
 
+2004-08-11 (feature)[979101] [tk_getOpenFile] consults env vars (fellows)
+
 2004-08-19 (new feature)[TIP 168] Add -smooth method for alternative bezier
 curve implementations on canvas items (hellstroem, fellows)
 
@@ -5858,6 +5863,8 @@ widget subcommand (griffin, darley)
 
 2004-10-08 (new feature)[TIP 205] Use pkgconfig Database to register Xft
 support (english)
+
+2004-10-11 (new language) Swedish message catalog from Mats Bengtsson
 
 2004-10-19 (new feature)[TIP 204][976928] Virtual events for keyboard
 traversal (english)
@@ -5876,6 +5883,6 @@ thoyts)
 2004-11-28 (bug fix)[942320] Fix short integer overflow in x,y coordinates
 for long lines using unix AA fonts (english)
 
-Updated test suite and documentation
+Updated test suite, documentation, and demos.
 
 --- Released 8.5a2, December 7, 2004 --- See ChangeLog for details ---
